# servers

src/git/src/mcp_server_git/: server.py
src/mcp-python/: README.md  pyproject.toml
