[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mcp-python"
version = "0.1.3"
description = "MCP server providing a Python REPL with persistent session"
requires-python = ">=3.10"
dependencies = ["mcp"]
authors = [{ name = "Tynan Daly", email = "tynan@hdr.is" }]
license = "MIT"
keywords = ["mcp", "repl", "python", "server"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
readme = "README.md"

[project.urls]
Homepage = "https://hdr.is"
Repository = "https://github.com/hdresearch/mcp-python.git"
Issues = "https://github.com/hdresearch/mcp-python/issues"
Github = "https://github.com/hdresearch/mcp-python"

[project.scripts]
mcp-python = "mcp_python:main"

# Add this section to tell Hatch where to find the package files
[tool.hatch.build.targets.wheel]
packages = ["src/mcp_python"]
